@@ -1,5 +1,6 @@
 1.06 
  [Michal Špaček]
+ - Add DEPENDENCIES section to doc.
  - Add Test::NoWarnings to tests.
  - Add VERSION to doc.
  - Add utf8 encoding to doc.
